<resources>
    <string name="app_name">AROC</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="back_description">뒤로가기 버튼입니다.</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="usertype">회원유형</string>
    <string name="user">사용자</string>
    <string name="guardian">보호자</string>
    <string name="name">이름</string>
    <string name="number">전화번호</string>
    <string name="logo">이 앱의 로고입니다.(지도와 흰지팡이가 그려져 있습니다.)</string>
    <string name="map">길찾기</string>
    <string name="location">내 위치</string>
    <string name="detection">장애물 탐지</string>
    <string name="my_info">내 회원정보</string>
    <string name="my_guardian">나의 보호자 관리</string>
    <string name="speech_input">음성 입력</string>
    <string name="destination">목적지</string>
    <string name="submit">전송</string>
    <string name="status">상태 체크</string>
    <string name="update">수정</string>
    <string name="id">인덱스</string>
    <string name="edit">회원 정보 수정</string>
    <string name="delete">회원 탈퇴</string>

</resources>