<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".UserInfoViewActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_description"/>

    <TextView
        android:id="@+id/infoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="회원정보 조회"
        android:textSize="32sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:id="@+id/userinfo_back"
        android:layout_width="410dp"
        android:layout_height="600dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="287dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/userTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/usertype"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <RadioGroup
            android:id="@+id/userTypeRadioGroup_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/userRadioButton_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="1"
                android:text="@string/user"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/guardianRadioButton_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="0"
                android:text="@string/guardian"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:enabled="false"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Email_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoEmail"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edit_text_border_orange"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoName"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edit_text_border_orange"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_marginStart="25dp"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoPhone"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edit_text_border_orange"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/editBtn"
            android:layout_width="356dp"
            android:layout_height="64dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/edit"
            android:textSize="18sp"
            app:backgroundTint="@color/btn_color" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="356dp"
            android:layout_height="64dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/delete"
            android:textSize="18sp"
            app:backgroundTint="@color/btn_color" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

