<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#434343"
    tools:context=".Main2Activity">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="173dp"
        android:layout_height="197dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="78dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/main_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo"/>

    <LinearLayout
        android:id="@+id/main_back"
        android:layout_width="414dp"
        android:layout_height="380dp"
        android:layout_marginTop="220dp"
        android:background="#373738"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/kakao_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:foreground="@drawable/kakao_login_large_wide"
            tools:layout_marginTop="40dp" />

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:insetTop="30dp"
                android:insetBottom="20dp"
                android:text="@string/login"
                android:textSize="20sp"
                app:backgroundTint="@color/btn_color"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/sign_btn"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:insetTop="30dp"
                android:insetBottom="020dp"
                android:text="@string/signup"
                android:textSize="20sp"
                app:backgroundTint="@color/btn_color"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>